# KNN_classification_server

./: .gitignore  CMakeLists.txt  README.md  makefile
IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
command/: Command.cpp  Command.h  OptionEight.cpp  OptionEight.h  OptionFive.cpp  OptionFive.h  OptionFour.cpp  OptionFour.h  OptionOne.cpp  OptionOne.h  OptionThree.cpp  OptionThree.h  OptionTwo.cpp  OptionTwo.h
runner/: CLI.cpp  CLI.h  client.cpp  client.h  server.cpp  server.h
utilities/: Distance.cpp  Distance.h  KNN.cpp  KNN.h  LabeledVector.cpp  LabeledVector.h  LoadData.cpp  LoadData.h  Operations.cpp  Operations.h  Server.cpp  Server.h  UnlabeledVector.cpp  UnlabeledVector.h  Utilities.cpp  Utilities.h  main.cpp  main.h
